k3s/lidarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-service
  labels:
    app: lidarr
spec:
  type: LoadBalancer
  selector:
    app: lidarr
  ports:
    - protocol: TCP
      port: 8686
      targetPort: 8686
      name: lidarr
