k3s/lidarr/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  namespace: mediamaven
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /lidarr
        pathType: Prefix
        backend:
          service:
            name: lidarr-service
            port:
              number: 8686
